--- a/css/gitdown.css
+++ b/css/gitdown.css
@@ -128,6 +128,10 @@
   margin-right: 1rem !important;
 }
 
+.tw-mr-8 {
+  margin-right: 2rem !important;
+}
+
 .tw-box-border {
   box-sizing: border-box !important;
 }
