--- a/css/gitdown.css
+++ b/css/gitdown.css
@@ -112,6 +112,10 @@
   top: 0px !important;
 }
 
+.tw-m-0 {
+  margin: 0px !important;
+}
+
 .tw-mb-3 {
   margin-bottom: 0.75rem !important;
 }
@@ -130,6 +134,10 @@
 
 .tw-mr-8 {
   margin-right: 2rem !important;
+}
+
+.tw-mt-3 {
+  margin-top: 0.75rem !important;
 }
 
 .tw-box-border {
@@ -162,6 +170,14 @@
           user-select: none !important;
 }
 
+.tw-flex-wrap {
+  flex-wrap: wrap !important;
+}
+
+.tw-content-center {
+  align-content: center !important;
+}
+
 .tw-items-center {
   align-items: center !important;
 }
@@ -172,6 +188,39 @@
 
 .tw-gap-2 {
   gap: 0.5rem !important;
+}
+
+.tw-border-none {
+  border-style: none !important;
+}
+
+.tw-bg-transparent {
+  background-color: transparent !important;
+}
+
+.tw-py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
+.tw-py-8 {
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+}
+
+.tw-py-4 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
+.tw-py-\[10px\] {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+}
+
+.tw-py-\[5px\] {
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
 }
 
 .tw-text-xl {
