--- a/css/gitdown.css
+++ b/css/gitdown.css
@@ -112,6 +112,10 @@
   top: 0px !important;
 }
 
+.tw-m-0 {
+  margin: 0px !important;
+}
+
 .tw-mb-2 {
   margin-bottom: 0.5rem !important;
 }
@@ -130,6 +134,10 @@
 
 .tw-mr-4 {
   margin-right: 1rem !important;
+}
+
+.tw-mt-4 {
+  margin-top: 1rem !important;
 }
 
 .tw-box-border {
@@ -164,12 +172,16 @@
   width: 100% !important;
 }
 
-.tw-max-w-3xl {
-  max-width: 48rem !important;
+.tw-w-1\/3 {
+  width: 33.333333% !important;
 }
 
 .tw-max-w-2xl {
   max-width: 42rem !important;
+}
+
+.tw-max-w-xl {
+  max-width: 36rem !important;
 }
 
 .tw-select-none {
@@ -180,10 +192,6 @@
 
 .tw-flex-col {
   flex-direction: column !important;
-}
-
-.tw-content-center {
-  align-content: center !important;
 }
 
 .tw-items-center {
@@ -211,51 +219,26 @@
   background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-bg-orange-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 237 213 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-bg-orange-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity)) !important;
-}
-
 .tw-bg-orange-600 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-bg-orange-200 {
+.tw-bg-neutral-300 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-bg-green-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-bg-green-600 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-p-4 {
-  padding: 1rem !important;
-}
-
-.tw-p-2 {
-  padding: 0.5rem !important;
+.tw-p-0 {
+  padding: 0px !important;
 }
 
 .tw-p-1 {
   padding: 0.25rem !important;
 }
 
-.tw-px-4 {
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
+.tw-p-3 {
+  padding: 0.75rem !important;
 }
 
 .tw-px-2 {
@@ -263,9 +246,18 @@
   padding-right: 0.5rem !important;
 }
 
-.tw-text-xl {
-  font-size: 1.25rem !important;
-  line-height: 1.75rem !important;
+.tw-px-4 {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+}
+
+.tw-py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
+.tw-text-left {
+  text-align: left !important;
 }
 
 .tw-text-3xl {
@@ -273,38 +265,22 @@
   line-height: 2.25rem !important;
 }
 
-.tw-text-\[3em\] {
-  font-size: 3em !important;
-}
-
-.tw-text-\[1em\] {
-  font-size: 1em !important;
-}
-
-.tw-text-\[1\.7em\] {
-  font-size: 1.7em !important;
-}
-
-.tw-text-\[1\.3em\] {
-  font-size: 1.3em !important;
-}
-
-.tw-text-6xl {
-  font-size: 3.75rem !important;
-  line-height: 1 !important;
-}
-
 .tw-text-4xl {
   font-size: 2.25rem !important;
   line-height: 2.5rem !important;
 }
 
-.tw-font-semibold {
-  font-weight: 600 !important;
+.tw-text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
 .tw-font-bold {
   font-weight: 700 !important;
+}
+
+.tw-font-semibold {
+  font-weight: 600 !important;
 }
 
 .tw-leading-relaxed {
@@ -316,9 +292,9 @@
   color: rgb(163 163 163 / var(--tw-text-opacity)) !important;
 }
 
-.tw-text-orange-600 {
+.tw-text-orange-200 {
   --tw-text-opacity: 1 !important;
-  color: rgb(234 88 12 / var(--tw-text-opacity)) !important;
+  color: rgb(254 215 170 / var(--tw-text-opacity)) !important;
 }
 
 .tw-text-orange-800 {
@@ -326,33 +302,35 @@
   color: rgb(154 52 18 / var(--tw-text-opacity)) !important;
 }
 
-.tw-text-orange-100 {
+.tw-text-neutral-300 {
   --tw-text-opacity: 1 !important;
-  color: rgb(255 237 213 / var(--tw-text-opacity)) !important;
+  color: rgb(212 212 212 / var(--tw-text-opacity)) !important;
 }
 
-.tw-text-\[\] {
-  color:  !important;
-}
-
-.tw-text-orange-200 {
+.tw-text-neutral-500 {
   --tw-text-opacity: 1 !important;
-  color: rgb(254 215 170 / var(--tw-text-opacity)) !important;
+  color: rgb(115 115 115 / var(--tw-text-opacity)) !important;
 }
 
-.tw-text-green-200 {
+.tw-text-blue-500 {
   --tw-text-opacity: 1 !important;
-  color: rgb(187 247 208 / var(--tw-text-opacity)) !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
 }
 
-.tw-text-green-800 {
+.tw-text-green-600 {
   --tw-text-opacity: 1 !important;
-  color: rgb(22 101 52 / var(--tw-text-opacity)) !important;
+  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
 }
 
-.tw-drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06)) !important;
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
+.tw-text-neutral-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(82 82 82 / var(--tw-text-opacity)) !important;
+}
+
+.tw-shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1) !important;
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 .tw-backdrop-blur-\[4px\] {
