--- a/css/gitdown.css
+++ b/css/gitdown.css
@@ -168,12 +168,20 @@
   width: 0px !important;
 }
 
+.tw-w-1\/3 {
+  width: 33.333333% !important;
+}
+
 .tw-w-full {
   width: 100% !important;
 }
 
-.tw-w-1\/3 {
-  width: 33.333333% !important;
+.tw-w-\[px\] {
+  width: px !important;
+}
+
+.tw-w-\[30px\] {
+  width: 30px !important;
 }
 
 .tw-max-w-2xl {
@@ -182,6 +190,10 @@
 
 .tw-max-w-xl {
   max-width: 36rem !important;
+}
+
+.tw-flex-grow {
+  flex-grow: 1 !important;
 }
 
 .tw-select-none {
@@ -206,12 +218,21 @@
   justify-content: center !important;
 }
 
+.tw-justify-between {
+  justify-content: space-between !important;
+}
+
 .tw-gap-2 {
   gap: 0.5rem !important;
 }
 
 .tw-gap-4 {
   gap: 1rem !important;
+}
+
+.tw-bg-neutral-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity)) !important;
 }
 
 .tw-bg-orange-300 {
@@ -222,11 +243,6 @@
 .tw-bg-orange-600 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-bg-neutral-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity)) !important;
 }
 
 .tw-p-0 {
@@ -287,9 +303,19 @@
   line-height: 1.625 !important;
 }
 
+.tw-text-blue-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
+}
+
 .tw-text-neutral-400 {
   --tw-text-opacity: 1 !important;
   color: rgb(163 163 163 / var(--tw-text-opacity)) !important;
+}
+
+.tw-text-neutral-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(115 115 115 / var(--tw-text-opacity)) !important;
 }
 
 .tw-text-orange-200 {
@@ -300,31 +326,6 @@
 .tw-text-orange-800 {
   --tw-text-opacity: 1 !important;
   color: rgb(154 52 18 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-neutral-300 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(212 212 212 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-neutral-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(115 115 115 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-blue-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-green-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-neutral-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(82 82 82 / var(--tw-text-opacity)) !important;
 }
 
 .tw-shadow-md {
