--- a/css/gitdown.css
+++ b/css/gitdown.css
@@ -129,6 +129,10 @@
   margin-bottom: 0.75rem !important;
 }
 
+.tw-mb-4 {
+  margin-bottom: 1rem !important;
+}
+
 .tw-mr-2 {
   margin-right: 0.5rem !important;
 }
@@ -143,14 +147,6 @@
 
 .tw-mt-4 {
   margin-top: 1rem !important;
-}
-
-.tw-mt-6 {
-  margin-top: 1.5rem !important;
-}
-
-.tw-mb-4 {
-  margin-bottom: 1rem !important;
 }
 
 .tw-box-border {
@@ -181,6 +177,10 @@
   height: 100% !important;
 }
 
+.tw-max-h-\[400px\] {
+  max-height: 400px !important;
+}
+
 .tw-w-0 {
   width: 0px !important;
 }
@@ -189,16 +189,12 @@
   width: 33.333333% !important;
 }
 
-.tw-w-full {
-  width: 100% !important;
-}
-
-.tw-w-\[px\] {
-  width: px !important;
-}
-
 .tw-w-\[30px\] {
   width: 30px !important;
+}
+
+.tw-w-full {
+  width: 100% !important;
 }
 
 .tw-max-w-2xl {
@@ -223,10 +219,6 @@
   grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
 }
 
-.tw-grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-}
-
 .tw-flex-col {
   flex-direction: column !important;
 }
@@ -235,82 +227,51 @@
   align-items: center !important;
 }
 
-.tw-items-baseline {
-  align-items: baseline !important;
-}
-
 .tw-justify-center {
   justify-content: center !important;
-}
-
-.tw-justify-between {
-  justify-content: space-between !important;
-}
-
-.tw-gap-2 {
-  gap: 0.5rem !important;
-}
-
-.tw-gap-4 {
-  gap: 1rem !important;
-}
-
-.tw-gap-20 {
-  gap: 5rem !important;
-}
-
-.tw-gap-28 {
-  gap: 7rem !important;
 }
 
 .tw-gap-10 {
   gap: 2.5rem !important;
 }
 
-.tw-border-2 {
-  border-width: 2px !important;
+.tw-gap-2 {
+  gap: 0.5rem !important;
 }
 
-.tw-border-4 {
-  border-width: 4px !important;
+.tw-gap-28 {
+  gap: 7rem !important;
 }
 
-.tw-border-\[6px\] {
-  border-width: 6px !important;
+.tw-gap-3 {
+  gap: 0.75rem !important;
 }
 
-.tw-border-solid {
-  border-style: solid !important;
+.tw-gap-4 {
+  gap: 1rem !important;
 }
 
-.tw-border-green-800 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(22 101 52 / var(--tw-border-opacity)) !important;
+.tw-overflow-y-auto {
+  overflow-y: auto !important;
 }
 
-.tw-border-green-700 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(21 128 61 / var(--tw-border-opacity)) !important;
+.tw-overflow-x-visible {
+  overflow-x: visible !important;
 }
 
-.tw-border-green-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity)) !important;
+.tw-bg-\[\#f0f0f1\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(240 240 241 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-border-green-300 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity)) !important;
+.tw-bg-blue-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-border-green-400 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity)) !important;
-}
-
-.tw-border-blue-400 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity)) !important;
+.tw-bg-blue-900 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity)) !important;
 }
 
 .tw-bg-neutral-300 {
@@ -328,21 +289,6 @@
   background-color: rgb(234 88 12 / var(--tw-bg-opacity)) !important;
 }
 
-.tw-bg-green-600 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-bg-green-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity)) !important;
-}
-
-.tw-bg-blue-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity)) !important;
-}
-
 .tw-p-0 {
   padding: 0px !important;
 }
@@ -351,16 +297,16 @@
   padding: 0.25rem !important;
 }
 
-.tw-p-3 {
-  padding: 0.75rem !important;
-}
-
 .tw-p-2 {
   padding: 0.5rem !important;
 }
 
-.tw-p-4 {
-  padding: 1rem !important;
+.tw-p-3 {
+  padding: 0.75rem !important;
+}
+
+.tw-p-8 {
+  padding: 2rem !important;
 }
 
 .tw-px-2 {
@@ -376,6 +322,14 @@
 .tw-py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
+}
+
+.tw-pr-3 {
+  padding-right: 0.75rem !important;
+}
+
+.tw-pr-8 {
+  padding-right: 2rem !important;
 }
 
 .tw-text-left {
@@ -396,18 +350,13 @@
   line-height: 2.5rem !important;
 }
 
-.tw-text-xl {
-  font-size: 1.25rem !important;
+.tw-text-lg {
+  font-size: 1.125rem !important;
   line-height: 1.75rem !important;
 }
 
-.tw-text-2xl {
-  font-size: 1.5rem !important;
-  line-height: 2rem !important;
-}
-
-.tw-text-lg {
-  font-size: 1.125rem !important;
+.tw-text-xl {
+  font-size: 1.25rem !important;
   line-height: 1.75rem !important;
 }
 
@@ -423,9 +372,19 @@
   line-height: 1.625 !important;
 }
 
+.tw-text-blue-200 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(191 219 254 / var(--tw-text-opacity)) !important;
+}
+
 .tw-text-blue-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
+}
+
+.tw-text-blue-700 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(29 78 216 / var(--tw-text-opacity)) !important;
 }
 
 .tw-text-neutral-400 {
@@ -443,19 +402,14 @@
   color: rgb(254 215 170 / var(--tw-text-opacity)) !important;
 }
 
+.tw-text-orange-700 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(194 65 12 / var(--tw-text-opacity)) !important;
+}
+
 .tw-text-orange-800 {
   --tw-text-opacity: 1 !important;
   color: rgb(154 52 18 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-green-800 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(22 101 52 / var(--tw-text-opacity)) !important;
-}
-
-.tw-text-blue-800 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(30 64 175 / var(--tw-text-opacity)) !important;
 }
 
 .tw-shadow-md {
@@ -468,6 +422,40 @@
   --tw-backdrop-blur: blur(4px) !important;
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia) !important;
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia) !important;
+}
+
+.tw-transition-all {
+  transition-property: all !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
+}
+
+.hover\:tw-scale-110:hover {
+  --tw-scale-x: 1.1 !important;
+  --tw-scale-y: 1.1 !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.hover\:tw-scale-\[1\.02\]:hover {
+  --tw-scale-x: 1.02 !important;
+  --tw-scale-y: 1.02 !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.hover\:tw-scale-\[1\.01\]:hover {
+  --tw-scale-x: 1.01 !important;
+  --tw-scale-y: 1.01 !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.hover\:tw-cursor-pointer:hover {
+  cursor: pointer !important;
+}
+
+.hover\:tw-shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 @media (min-width: 768px) {
