--- a/css/input.css
+++ b/css/input.css
@@ -7,3 +7,9 @@
         box-sizing: border-box;
     }
 }
+
+@layer components {
+    .mgd-hide-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+}
